--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Escaneo de Pedidos - Demo</title>
   <style>
-    * { box-sizing: border-box; }
     body {
       font-family: sans-serif;
       margin: 0;
-      padding: 0;
       background: #fafafa;
     }
     .contenedor {
-      padding: 1rem;
-      background: white;
       max-width: 800px;
       margin: auto;
+      padding: 1rem;
+      background: #fff;
     }
-    h1 {
-      font-size: 1.5rem;
-      text-align: center;
-    }
-    input[type="file"], input[type="text"], input[type="url"], select, button {
-      width: 100%; max-width: 600px;
+    input, select, button {
+      width: 100%;
+      max-width: 600px;
       margin: 0.5rem auto;
       display: block;
       font-size: 1.1rem;
       padding: 0.5rem;
     }
     button {
-      cursor: pointer;
       background: #1976d2;
       color: white;
       border: none;
       border-radius: 5px;
+      cursor: pointer;
     }
     button:hover { background: #125aa0; }
     table {
-      border-collapse: collapse;
       width: 100%;
       margin-top: 1rem;
+      border-collapse: collapse;
       font-size: 0.95rem;
     }
     th, td {
-      border: 1px solid #ddd;
+      border: 1px solid #ccc;
       padding: 8px;
       text-align: center;
     }
     th { background: #f2f2f2; }
     .completo { background: #c8e6c9; }
     .exceso { background: #ffcdd2; }
-    .error {
-      color: red;
-      margin-top: 1rem;
-      font-size: 0.9rem;
-    }
-    #historial {
-      padding-top: 1rem;
-      font-size: 0.9rem;
-    }
     #mensaje-temporal {
-      color: red;
       text-align: center;
+      color: red;
       margin-top: 1rem;
-      font-weight: bold;
       display: none;
     }
   </style>
@@ -72,33 +57,91 @@
 <body>
   <div class="contenedor">
     <h1>Escaneo de Productos</h1>
-
-    <input type="url" id="sheetUrl" placeholder="URL pública de Google Sheets">
+    <input type="url" id="sheetUrl" placeholder="URL pública de Google Sheets" />
     <button onclick="cargarDesdeSheet()">Cargar</button>
 
     <select id="pedidoSelect"></select>
-    <input type="number" id="multiplicador" value="10" min="1" placeholder="Cantidad por escaneo">
-    <input type="text" id="barcodeInput" placeholder="Escanea código de barras" autofocus>
+    <input type="number" id="multiplicador" value="10" min="1" placeholder="Cantidad por escaneo"/>
+    <input type="text" id="barcodeInput" placeholder="Escanea código de barras" autofocus />
+
     <button onclick="exportarResumen()">Exportar resumen</button>
     <button onclick="guardarHistorial()">Guardar historial</button>
     <button onclick="verHistorial()">Ver historial</button>
 
-    <div id="errores" class="error"></div>
     <div id="mensaje-temporal"></div>
     <table id="pedidoTable"></table>
     <div id="historial"></div>
   </div>
 
   <audio id="sonido-ok" preload="auto">
-    <source src="/ok.mp3" type="audio/mpeg">
+    <source src="/ok.mp3" type="audio/mpeg" />
   </audio>
   <audio id="sonido-error" preload="auto">
-    <source src="/error.mp3" type="audio/mpeg">
+    <source src="/error.mp3" type="audio/mpeg" />
   </audio>
 
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script>
-    // el resto del JS se mantiene igual
-  </script>
-</body>
-</html>
+    let pedidos = {};
+    let pedidoActual = null;
+    let historial = [];
+
+    function cargarDesdeSheet() {
+      const url = document.getElementById("sheetUrl").value;
+      if (!url.includes("docs.google.com")) return mostrarMensaje("URL inválida");
+
+      const sheetID = url.match(/\/d\/(.*?)(\/|$)/)?.[1];
+      const apiUrl = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:csv`;
+
+      fetch(apiUrl)
+        .then(res => res.text())
+        .then(csv => Papa.parse(csv, { header: true }))
+        .then(result => {
+          pedidos = agruparPedidos(result.data);
+          llenarSelect();
+        })
+        .catch(() => mostrarMensaje("No se pudo cargar el archivo"));
+    }
+
+    function agruparPedidos(data) {
+      const grupos = {};
+      data.forEach(row => {
+        const id = row.PEDIDO;
+        if (!grupos[id]) grupos[id] = [];
+        grupos[id].push({
+          codigo: row.CODIGO,
+          descripcion: row.DESCRIPCION,
+          cantidad: parseInt(row.CANTIDAD),
+          escaneados: 0
+        });
+      });
+      return grupos;
+    }
+
+    function llenarSelect() {
+      const select = document.getElementById("pedidoSelect");
+      select.innerHTML = "";
+      Object.keys(pedidos).forEach(id => {
+        const option = document.createElement("option");
+        option.value = id;
+        option.textContent = id;
+        select.appendChild(option);
+      });
+      select.onchange = () => {
+        pedidoActual = pedidos[select.value];
+        mostrarPedido();
+      };
+      pedidoActual = pedidos[select.value];
+      mostrarPedido();
+    }
+
+    function mostrarPedido() {
+      const tabla = document.getElementById("pedidoTable");
+      tabla.innerHTML = "";
+      if (!pedidoActual) return;
+
+      const thead = document.createElement("thead");
+      thead.innerHTML = `<tr><th>Código</th><th>Descripción</th><th>Requerido</th><th>Escaneado</th></tr>`;
+      tabla.appendChild(thead);
+
+      const tbody = document.createElement("tbo
